Fixes LanguageRulesTest and tests/run_tests.sh